# django-tested

./: .coveragerc  .gitignore  Pipfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
birdie/: admin.py  apps.py  forms.py  models.py  views.py
birdie/migrations/: 0001_initial.py
birdie/tests/: test_admin.py  test_forms.py  test_models.py  test_views.py
tested/: .coveragerc  manage.py  settings.py  test_settings.py  urls.py  wsgi.py
tested/birdie/: admin.py  forms.py  models.py  views.py
tested/birdie/tests/: test_admin.py  test_forms.py  test_models.py  test_views.py
tested/tested/: settings.py  urls.py  wsgi.py
