[project]
name = "django-tested"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "stripe>=13.2.0",
]

[dependency-groups]
dev = [
    "mixer>=7.2.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tested.test_settings"
addopts = ["--nomigrations", "--cov=.", "--cov-report=html"]

[tool.coverage.run]
omit =[
    "*apps.py",
    "*/migrations/*",
    "*settings*",
    "*/tests/*",
    "*urls.py",
    "*wsgi.py",
    "*.venv/*",
    "*__init__.py",
    "manage.py"
]
